=======
CHANGES
=======

1.4.7 (2009-04-??)
------------------

- Do not use z3c.autoinclude


1.4.6 (2009-03-17)
------------------

- Fixed preference index view


1.4.5 (2009-01-09)
------------------

- Added 'accesspremission' attribute for preferenceGroup directive

- Fixed security for preference group


1.4.4 (2008-12-22)
------------------

- Use new pagelet api


1.4.3 (2008-12-12)
------------------

- Simplify preferences navigation

- raise Unauthorized exception if unauthenticated user access preferences panel


1.4.2 (2008-10-27)
------------------

- Show preference category if it has editable fields


1.4.1 (2008-10-22)
------------------

- Added translations: ru, nl


1.4.0 (2008-10-15)
------------------

- UI api refactored

- Added default css styles


1.3.2 (2008-05-16)
------------------

- Replace 'autoinclude' with 'includeDependendcies'


1.3.1 (2008-05-07)
------------------

- Fix category rendering


1.3.0 (2008-05-06)
------------------

- UI refactoring

- Do not include permission checker for zope.Public permission


1.2.1 (2008-04-22)
------------------

- Added permission checker to directive


1.2.0 (2008-04-18)
------------------

- 'schema' field for z3ext:preferenceGroup is required now

- Added adapter for IPrincipal to 'schema' with automatic binding


1.1.1 (2008-04-15)
------------------

- Use 'z3ext.ManagePreference' as default preference permission


1.1.0 (2008-04-11)
------------------

- Added 'for' field to z3ext:preferenceGroup directive


1.0.2 (2008-04-07)
------------------

- Fix UI in navigation


1.0.1 (2008-04-04)
------------------

- Fixed group category layout


1.0.0 (2008-03-25)
------------------

- Tests added

- Code moved to svn.zope.org


0.9.2 (2008-02-29)
------------------

- Use z3c.autoinclude

- Added z3c.baseregistry support


0.9.1 (2008-02-20)
------------------

- Use z3ext.layoutform


0.9.0 (2008-02-01)
------------------

- Initial release