@@ -66,7 +66,7 @@ Browser
   >>> print user.contents
   <html>
   ...
-  <h1 class="z-prefs-title">Personal preferences</h1>
+  ...<h1 class="z-prefs-title">Personal preferences</h1>
   <div class="z-page-description">This area allows you to change personal preferences.</div>
   <div class="z-prefs-content"><div class="z-form">
   <ul class="z-listing">
