@@ -7,6 +7,8 @@ CHANGES
 
 - Do not use z3c.autoinclude
 
+- Update styles
+
 
 1.4.6 (2009-03-17)
 ------------------
